--- a/大学生自我管理APP-02/common/self-record/self-record.css
+++ b/大学生自我管理APP-02/common/self-record/self-record.css
@@ -12,7 +12,7 @@
 }
 	
 	
-
+	
 
 .gallery_img {
 	width: 100%;
@@ -169,8 +169,16 @@
 		height: 100vh;
 		overflow: hidden;
 	}
+	
+	.null{
+		width: 100vw;
+		padding: 32% 0; 
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
 
-#moments .home-pic {
+#moments .home-pic { 
 	width: 100%;
 	/* margin-top: -150upx; */
 	position: relative;
@@ -193,7 +201,25 @@
 	width: 100%;
 	height: 160upx;
 	padding: 0 30upx;
+	
+
 }
+
+.icon{
+	width: 100%;
+	height: 100upx;
+	display: flex;
+	gap: 10%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.icon view{
+	flex: 1;
+	
+}
+
 
 #moments .home-pic-base .top-pic {
 	width: 360upx;
